<resources>
    <string name="app_name" translatable="false">Signal</string>
    <string name="install_url" translatable="false">https://signal.org/install</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <string name="ApplicationMigrationActivity__signal_is_updating">Signal is updating…</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Signal and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Signal messages and calls…</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Signal messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Signal messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Signal your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="preferences__sms_mms">SMS and MMS</string>
    <string name="preferences__pref_enter_sends_title">Enter key sends</string>
    <string name="preferences__pressing_the_enter_key_will_send_text_messages">Pressing the Enter key will send text messages</string>
    <string name="preferences__choose_identity">Choose identity</string>
    <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Choose your contact entry from the contacts list.</string>
    <string name="preferences__change_passphrase">Change passphrase</string>
    <string name="preferences__change_your_passphrase">Change your passphrase</string>
    <string name="preferences__enable_passphrase">Enable passphrase screen lock</string>
    <string name="preferences__lock_signal_and_message_notifications_with_a_passphrase">Lock screen and notifications with a passphrase</string>
    <string name="preferences__screen_security">Screen security</string>
    <string name="preferences__disable_screen_security_to_allow_screen_shots">Block screenshots in the recents list and inside the app</string>
    <string name="preferences__auto_lock_signal_after_a_specified_time_interval_of_inactivity">Auto-lock Signal after a specified time interval of inactivity</string>
    <string name="preferences__inactivity_timeout_passphrase">Inactivity timeout passphrase</string>
    <string name="preferences__inactivity_timeout_interval">Inactivity timeout interval</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__led_color">LED color</string>
    <string name="preferences__pref_led_blink_title">LED blink pattern</string>
    <string name="preferences__sound">Sound</string>
    <string name="preferences__repeat_alerts">Repeat alerts</string>
    <string name="preferences__vibrate">Vibrate</string>
    <string name="preferences__help">Help</string>
    <string name="preferences__advanced">Advanced</string>
    <string name="preferences__privacy">Privacy</string>
    <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Automatically delete older messages once a conversation exceeds a specified length</string>
    <string name="preferences__delete_old_messages">Delete old messages</string>
    <string name="preferences__chats">Chats and media</string>
    <string name="preferences__storage">Storage</string>
    <string name="preferences__conversation_length_limit">Conversation length limit</string>
    <string name="preferences__trim_all_conversations_now">Trim all conversations now</string>
    <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Scan through all conversations and enforce conversation length limits</string>
    <string name="preferences__linked_devices">Linked devices</string>
    <string name="preferences__appearance">Appearance</string>
    <string name="preferences__signal_messages_and_calls">Signal messages and calls</string>
    <string name="preferences__free_private_messages_and_calls">Free private messages and calls to Signal users</string>
    <string name="preferences__submit_debug_log">Submit debug log</string>
    <string name="preferences__incognito_keyboard">Incognito keyboard</string>
    <string name="preferences__read_receipts">Read receipts</string>
    <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="preferences__typing_indicators">Typing indicators</string>
    <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">If typing indicators are disabled, you won\'t be able to see typing indicators from others.</string>
    <string name="preferences__request_keyboard_to_disable_personalized_learning">Request keyboard to disable personalized learning</string>
    <string name="preferences_app_protection__blocked_contacts">Blocked contacts</string>
    <string name="preferences_chats__when_using_mobile_data">When using mobile data</string>
    <string name="preferences_chats__when_using_wifi">When using Wi-Fi</string>
    <string name="preferences_chats__when_roaming">When roaming</string>
    <string name="preferences_chats__media_auto_download">Media auto-download</string>
    <string name="preferences_chats__message_trimming">Message trimming</string>
    <string name="preferences_storage__storage_usage">Storage usage</string>
    <string name="preferences_advanced__use_system_emoji">Use system emoji</string>
    <string name="preferences_advanced__disable_signal_built_in_emoji_support">Disable Signal\'s built-in emoji support</string>
    <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Relay all calls through the Signal server to avoid revealing your IP address to your contact. Enabling will reduce call quality.</string>
    <string name="preferences_advanced__always_relay_calls">Always relay calls</string>
    <string name="preferences_app_protection__app_access">App access</string>
    <string name="preferences_app_protection__communication">Communication</string>
    <string name="preferences_chats__chats">Chats</string>
    <string name="preferences_notifications__messages">Messages</string>
    <string name="preferences_notifications__events">Events</string>
    <string name="preferences_notifications__in_chat_sounds">In-chat sounds</string>
    <string name="preferences_notifications__show">Show</string>
    <string name="preferences_notifications__calls">Calls</string>
    <string name="preferences_notifications__ringtone">Ringtone</string>
    <string name="preferences_chats__show_invitation_prompts">Show invitation prompts</string>
    <string name="preferences_chats__display_invitation_prompts_for_contacts_without_signal">Display invitation prompts for contacts without Signal</string>
    <string name="preferences_chats__message_text_size">Message font size</string>
    <string name="preferences_events__contact_joined_signal">Contact joined Signal</string>
    <string name="preferences_notifications__priority">Priority</string>
    <string name="preferences_communication__category_sealed_sender">Sealed Sender</string>
    <string name="preferences_communication__sealed_sender_display_indicators">Display indicators</string>
    <string name="preferences_communication__sealed_sender_display_indicators_description">Show a status icon when you select "Message details" on messages that were delivered using sealed sender.</string>
    <string name="preferences_communication__sealed_sender_allow_from_anyone">Allow from anyone</string>
    <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Enable sealed sender for incoming messages from non-contacts and people with whom you have not shared your profile.</string>
    <string name="preferences_chats__chat_backups">Chat backups</string>
    <string name="preferences_chats__backup_chats_to_external_storage">Backup chats to external storage</string>
    <string name="preferences_chats__create_backup">Create backup</string>
    <string name="preferences_chats__verify_backup_passphrase">Verify backup passphrase</string>
    <string name="preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches">Test your backup passphrase and verify that it matches</string>
    <string name="preferences_app_protection__screen_lock">Screen lock</string>
    <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Lock Signal access with Android screen lock or fingerprint</string>
    <string name="preferences_app_protection__screen_lock_inactivity_timeout">Screen lock inactivity timeout</string>
    <string name="preferences_app_protection__signal_pin">Signal PIN</string>
    <string name="preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required">Enable a Registration Lock PIN that will be required to register this phone number with Signal again.</string>
    <string name="preferences_app_protection__registration_lock_pin">Registration Lock PIN</string>
    <string name="preferences_app_protection__registration_lock">Registration Lock</string>
    <string name="preferences_chats__backups">Backups</string>
</resources>