<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/tools">

    <PreferenceCategory android:contentDescription="preferences_chats__media_auto_download" android:key="media_download" android:title="@string/preferences_chats__media_auto_download">

        <MultiSelectListPreference android:contentDescription="preferences_chats__when_using_mobile_data" android:defaultValue="@array/pref_media_download_mobile_data_default" android:entries="@array/pref_media_download_values" android:entryValues="@array/pref_media_download_entries" android:key="pref_media_download_mobile" android:persistent="true" android:title="@string/preferences_chats__when_using_mobile_data" />



        <MultiSelectListPreference android:contentDescription="preferences_chats__when_using_wifi" android:defaultValue="@array/pref_media_download_wifi_default" android:entries="@array/pref_media_download_values" android:entryValues="@array/pref_media_download_entries" android:key="pref_media_download_wifi" android:persistent="true" android:title="@string/preferences_chats__when_using_wifi" />



        <MultiSelectListPreference android:contentDescription="preferences_chats__when_roaming" android:defaultValue="@array/pref_media_download_roaming_default" android:entries="@array/pref_media_download_values" android:entryValues="@array/pref_media_download_entries" android:key="pref_media_download_roaming" android:persistent="true" android:title="@string/preferences_chats__when_roaming" />

    </PreferenceCategory>



    <PreferenceCategory android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="preferences_chats__chats" android:title="@string/preferences_chats__chats">

        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="preferences_chats__message_text_size" android:defaultValue="16" android:entries="@array/pref_message_font_size_entries" android:entryValues="@array/pref_message_font_size_values" android:key="pref_message_body_text_size" android:title="@string/preferences_chats__message_text_size">

        </org.thoughtcrime.securesms.preferences.widgets.SignalListPreference>



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences_chats__display_invitation_prompts_for_contacts_without_signal" android:defaultValue="true" android:key="pref_show_invite_reminder" android:summary="@string/preferences_chats__display_invitation_prompts_for_contacts_without_signal" android:title="@string/preferences_chats__show_invitation_prompts" />



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences_advanced__disable_signal_built_in_emoji_support" android:defaultValue="false" android:key="pref_system_emoji" android:summary="@string/preferences_advanced__disable_signal_built_in_emoji_support" android:title="@string/preferences_advanced__use_system_emoji" />



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__pressing_the_enter_key_will_send_text_messages" android:defaultValue="false" android:key="pref_enter_sends" android:summary="@string/preferences__pressing_the_enter_key_will_send_text_messages" android:title="@string/preferences__pref_enter_sends_title" />



    </PreferenceCategory>



    <PreferenceCategory android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="preferences_chats__backups" android:key="backup_category" android:title="@string/preferences_chats__backups">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences_chats__backup_chats_to_external_storage" android:defaultValue="false" android:key="pref_backup_enabled" android:summary="@string/preferences_chats__backup_chats_to_external_storage" android:title="@string/preferences_chats__chat_backups" />



        <org.thoughtcrime.securesms.preferences.widgets.ProgressPreference android:contentDescription="preferences_chats__create_backup" android:dependency="pref_backup_enabled" android:key="pref_backup_create" android:persistent="false" android:title="@string/preferences_chats__create_backup" app:summary="Last backup: 3 days ago" />



        <androidx.preference.Preference android:contentDescription="preferences_chats__verify_backup_passphrase" android:dependency="pref_backup_enabled" android:key="pref_backup_passphrase_verify" android:persistent="false" android:summary="@string/preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches" android:title="@string/preferences_chats__verify_backup_passphrase" />



    </PreferenceCategory>



</PreferenceScreen>
