<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <org.thoughtcrime.securesms.preferences.widgets.ProfilePreference android:key="preference_category_profile" />



    <Preference android:contentDescription="preferences__sms_mms" android:icon="?attr/message_icon" android:key="preference_category_sms_mms" android:title="@string/preferences__sms_mms" />



    <Preference android:contentDescription="preferences__notifications" android:icon="?attr/notifications_icon" android:key="preference_category_notifications" android:title="@string/preferences__notifications" />



    <Preference android:contentDescription="preferences__privacy" android:icon="?attr/privacy_icon" android:key="preference_category_app_protection" android:title="@string/preferences__privacy" />



    <Preference android:contentDescription="preferences__appearance" android:icon="?attr/appearance_icon" android:key="preference_category_appearance" android:title="@string/preferences__appearance" />



    <Preference android:contentDescription="preferences__chats" android:icon="?attr/chats_and_media_icon" android:key="preference_category_chats" android:title="@string/preferences__chats" />



    <Preference android:contentDescription="preferences__storage" android:icon="?attr/data_and_storage_icon" android:key="preference_category_storage" android:title="@string/preferences__storage" />



    <Preference android:contentDescription="preferences__linked_devices" android:icon="?attr/linked_devices_icon" android:key="preference_category_devices" android:title="@string/preferences__linked_devices" />



    <Preference android:contentDescription="preferences__help" android:icon="?attr/help_icon" android:key="preference_category_help" android:title="@string/preferences__help" />



    <Preference android:contentDescription="preferences__advanced" android:icon="?attr/advanced_icon" android:key="preference_category_advanced" android:title="@string/preferences__advanced" />



</PreferenceScreen>
