<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__free_private_messages_and_calls" android:defaultValue="false" android:key="pref_toggle_push_messaging" android:summary="@string/preferences__free_private_messages_and_calls" android:title="@string/preferences__signal_messages_and_calls" />



    <Preference android:contentDescription="preferences__choose_identity" android:key="pref_choose_identity" android:summary="@string/preferences__choose_your_contact_entry_from_the_contacts_list" android:title="@string/preferences__choose_identity" />



    <Preference android:contentDescription="preferences__submit_debug_log" android:key="pref_submit_debug_logs" android:title="@string/preferences__submit_debug_log" />

</PreferenceScreen>
