<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory android:contentDescription="preferences_storage__storage_usage" android:title="@string/preferences_storage__storage_usage" />



    <org.thoughtcrime.securesms.preferences.widgets.StoragePreferenceCategory android:key="pref_storage_category" />



    <PreferenceCategory android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="preferences_chats__message_trimming" android:key="storage_limits" android:title="@string/preferences_chats__message_trimming">



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length" android:defaultValue="false" android:key="pref_trim_threads" android:summary="@string/preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length" android:title="@string/preferences__delete_old_messages" />



        <EditTextPreference android:contentDescription="preferences__conversation_length_limit" android:defaultValue="500" android:dependency="pref_trim_threads" android:inputType="number" android:key="pref_trim_length" android:title="@string/preferences__conversation_length_limit" />



        <Preference android:contentDescription="preferences__trim_all_conversations_now" android:dependency="pref_trim_threads" android:key="pref_trim_now" android:summary="@string/preferences__scan_through_all_conversations_and_enforce_conversation_length_limits" android:title="@string/preferences__trim_all_conversations_now" />



    </PreferenceCategory>



</PreferenceScreen>
