<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory android:contentDescription="preferences_notifications__messages" android:title="@string/preferences_notifications__messages">



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__notifications" android:defaultValue="true" android:key="pref_key_enable_notifications" android:title="@string/preferences__notifications" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference android:contentDescription="preferences__sound" android:defaultValue="content://settings/system/notification_sound" android:dependency="pref_key_enable_notifications" android:key="pref_key_ringtone" android:persistent="false" android:title="@string/preferences__sound" />



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__vibrate" android:defaultValue="true" android:dependency="pref_key_enable_notifications" android:key="pref_key_vibrate" android:title="@string/preferences__vibrate" />



        <org.thoughtcrime.securesms.preferences.widgets.LEDColorListPreference android:contentDescription="preferences__led_color" android:defaultValue="blue" android:dependency="pref_key_enable_notifications" android:entries="@array/pref_led_color_entries" android:entryValues="@array/pref_led_color_values" android:key="pref_led_color" android:title="@string/preferences__led_color" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="preferences__pref_led_blink_title" android:defaultValue="500,2000" android:dependency="pref_led_color" android:entries="@array/pref_led_blink_pattern_entries" android:entryValues="@array/pref_led_blink_pattern_values" android:key="pref_led_blink" android:title="@string/preferences__pref_led_blink_title" />



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences_notifications__in_chat_sounds" android:defaultValue="true" android:dependency="pref_key_enable_notifications" android:key="pref_key_inthread_notifications" android:title="@string/preferences_notifications__in_chat_sounds" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="preferences__repeat_alerts" android:defaultValue="0" android:dependency="pref_key_enable_notifications" android:entries="@array/pref_repeat_alerts_entries" android:entryValues="@array/pref_repeat_alerts_values" android:key="pref_repeat_alerts" android:title="@string/preferences__repeat_alerts" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="preferences_notifications__show" android:defaultValue="all" android:dependency="pref_key_enable_notifications" android:entries="@array/pref_notification_privacy_entries" android:entryValues="@array/pref_notification_privacy_values" android:key="pref_notification_privacy" android:title="@string/preferences_notifications__show" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="preferences_notifications__priority" android:defaultValue="1" android:dependency="pref_key_enable_notifications" android:entries="@array/pref_notification_priority_entries" android:entryValues="@array/pref_notification_priority_values" android:key="pref_notification_priority" android:title="@string/preferences_notifications__priority" />

    </PreferenceCategory>



    <PreferenceCategory android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="preferences_notifications__calls" android:title="@string/preferences_notifications__calls">



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__notifications" android:defaultValue="true" android:key="pref_call_notifications" android:title="@string/preferences__notifications" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference android:contentDescription="preferences_notifications__ringtone" android:defaultValue="content://settings/system/ringtone" android:dependency="pref_call_notifications" android:key="pref_call_ringtone" android:persistent="false" android:title="@string/preferences_notifications__ringtone" />



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences__vibrate" android:defaultValue="true" android:dependency="pref_call_notifications" android:key="pref_call_vibrate" android:title="@string/preferences__vibrate" />



    </PreferenceCategory>



    <PreferenceCategory android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="preferences_notifications__events" android:title="@string/preferences_notifications__events">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="preferences_events__contact_joined_signal" android:defaultValue="true" android:key="pref_enable_new_contacts_notifications" android:title="@string/preferences_events__contact_joined_signal" />

    </PreferenceCategory>



</PreferenceScreen>
